tests/NormalTests/paczka1/fuzzy1/30162127.err
Error in line 6: XWJD5 A62 68,1
Error in line 9: XWJD5 S288 87,3
Error in line 18: uk8Ac0H1JB A62 81,6
Error in line 12: 4xRCsdr A62 333,3
Error in line 33: S288 A62 36,1
